--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "p-cancelable",
+              "tiny-emitter",
+              "cross-fetch",
+              "clipboard",
+              "@sindresorhus/to-milliseconds",
+              "parse-ms",
+              "q",
+              "@babel/runtime-corejs3",
+              "detect-node",
+              "lodash"
+            ],
             "outputPath": "dist/okta-app",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -50,17 +62,22 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@okta/okta-signin-widget/dist/css/okta-sign-in.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/@okta/okta-signin-widget/dist/js/okta-sign-in.min.js"
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "6mb",
+                  "maximumError": "8mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -114,7 +131,6 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
