--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@okta/okta-angular": "^5.2.0",
     "@okta/okta-signin-widget": "^6.7.0",
     "bootstrap": "^5.2.0",
+    "leaflet": "^1.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
