--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@okta/okta-signin-widget": "^6.7.0",
     "bootstrap": "^5.2.0",
     "leaflet": "^1.8.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
