--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^14.1.0",
     "@nestjs/ng-universal": "^6.1.0",
     "@okta/okta-angular": "^5.2.0",
+    "@okta/okta-auth-js": "^6.8.0",
     "@okta/okta-signin-widget": "^6.7.0",
     "bootstrap": "^5.2.0",
+    "jquery": "^3.6.1",
     "leaflet": "^1.8.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
