--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/platform-server": "^14.0.0",
     "@angular/router": "^14.1.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
     "@nestjs/ng-universal": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@okta/okta-angular": "^5.2.0",
     "@okta/okta-signin-widget": "^6.7.0",
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
     "leaflet": "^1.8.0",
     "popper.js": "^1.16.1",
