--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@okta/okta-angular": "^5.2.0",
     "@okta/okta-auth-js": "^6.8.0",
     "@okta/okta-signin-widget": "^6.7.0",
+    "@peculiar/webcrypto": "^1.4.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.1",
