--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.2.2",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
-    "@angular/localize": "^14.1.0",
+    "@angular/material": "^14.2.2",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/platform-server": "^14.0.0",
@@ -30,10 +31,15 @@
     "@peculiar/webcrypto": "^1.4.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "jquery": "^3.6.1",
     "leaflet": "^1.8.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
+    "sequelize": "^6.21.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -41,6 +47,7 @@
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
+    "@angular/localize": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
