--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@okta/okta-signin-widget": "^6.7.0",
     "@peculiar/webcrypto": "^1.4.0",
     "@popperjs/core": "^2.11.5",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "leaflet": "^1.8.0",
     "popper.js": "^1.16.1",
