--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/platform-server": "^14.0.0",
     "@angular/router": "^14.1.0",
+    "@material/dialog": "^14.0.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^8.0.0",
     "@nestjs/ng-universal": "^6.1.0",
